how to import sass? learned

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
                 <li>Sass is free to download and use</li>
             </ul>
         </section>
+        <section>
+            <h2>Why Use Sass?</h2>
+            <p>Stylesheets are getting larger, more complex, and harder to maintain. This is where a CSS pre-processor can help.</p>
+            <p>Sass lets you use features that do not exist in CSS, like variables, nested rules, mixins, imports, inheritance, built-in functions, and other stuff.</p>
+        </section>
     </main>
 
     <footer class="align">copyright &copy; Khaled</footer>
