learn mixin & include with parameter

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
                 <li>Sass is free to download and use</li>
             </ul>
         </section>
-        <section>
+        <section >
             <h2>Why Use Sass?</h2>
-            <p>Stylesheets are getting larger, more complex, and harder to maintain. This is where a CSS pre-processor can help.</p>
-            <p>Sass lets you use features that do not exist in CSS, like variables, nested rules, mixins, imports, inheritance, built-in functions, and other stuff.</p>
+            <p class="benefit">Stylesheets are getting larger, more complex, and harder to maintain. This is where a CSS pre-processor can help.</p>
+            <p class="benefit">Sass lets you use features that do not exist in CSS, like variables, nested rules, mixins, imports, inheritance, built-in functions, and other stuff.</p>
+            <p id="special">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eaque voluptatibus dolorum qui mollitia officia nemo soluta et voluptatem in corporis unde laboriosam, nihil aliquid amet! Delectus repudiandae, cumque quod voluptatem amet vitae tempore numquam dolores consequuntur suscipit ea aut non, omnis cupiditate officiis beatae facere! Aspernatur expedita ipsam inventore. Laudantium, excepturi molestiae eius enim, inventore velit iure eos molestias dignissimos quidem atque nesciunt totam soluta accusamus ipsum veritatis! Eaque ad dignissimos cum a dolore! Id mollitia dolore natus maiores, illo eveniet aperiam ducimus nemo officia, rem error numquam deserunt ipsum dolorum ut quas doloremque excepturi quidem optio sint obcaecati?</p>
         </section>
     </main>
 
