learn extend & inherite

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <li>Sass was designed by Hampton Catlin and developed by Natalie Weizenbaum in 2006</li>
                 <li>Sass is free to download and use</li>
             </ul>
+            <input type="button" value="Download" class="btn-download">
+            <input type="button" value="Learn More" class="btn-learn">
         </section>
         <section >
             <h2>Why Use Sass?</h2>
